# internal/order/transport/http/dto/request.go
@@ -1,0 +1,9 @@
+package dto
+
+type CreateOrderRequest struct {
+	ShippingAddress string `json:"shipping_address" binding:"required"`
+}
+
+type UpdateStatusRequest struct {
+	Status string `json:"status" binding:"required"`
+}
